syntax = "proto3";

option csharp_namespace = "Protos.Dogs";

package dogs;

import "Entities/Dog.proto";

service Dogs {
  rpc createDog (CreateDogRequest) returns (CreateDogResponse);
  
  rpc getAllDogs (GetAllDogsRequest) returns (GetAllDogsResponse);
  
  rpc getDogsFilteredByChip (GetDogsFilteredByChipRequest) returns (GetDogsFilteredByChipResponse);
  
  rpc deleteDog (DeleteDogRequest) returns (DeleteDogResponse);
}

message CreateDogRequest {
  shared.Dog Dog = 1;
}

message CreateDogResponse {
  shared.Dog Dog = 1;
}

message GetAllDogsRequest {
  
}

message GetAllDogsResponse {
  repeated shared.Dog Dogs = 1;
}

message DeleteDogRequest {
  string Id = 1;
}

message DeleteDogResponse {
  
}

message GetDogsFilteredByChipRequest {
  string Chip = 1;
}

message GetDogsFilteredByChipResponse {
  repeated shared.Dog dogs = 1;
}